fixed missing border on new work orders

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,6 +77,9 @@ tr:hover {
 .italic {
   font-style: italic; }
 
+.border-left-0 {
+  border-left: 8px solid #00cc00; }
+
 .border-left-1 {
   border-left: 8px solid #00cc00; }
 
